# dagger-2023

./: .gitignore  CoffeeCup.bat  CoffeeCup.sh  dagger.ini  meson.build  premake5.lua
.config/: dotnet-tools.json
data/: entry.yaml
include/: Access.h  Assets.h  DaggerEditorTool.h  DataBrowserTool.h  Definitions.h  Diagnostics.h  DiagnosticsTool.h  DiagnosticsUtil.h  Engine.h  EventBus.h  Geometry.h  ImagePreviewTool.h  Loaders.h  Rendering.h  Setup.h  SpriteEditorTool.h  SpriteRendering.h  Tooling.h  Windowing.h
src/: DaggerEditorTool.cpp  DataBrowserTool.cpp  Diagnostics.cpp  DiagnosticsTool.cpp  EventBus.cpp  ImagePreviewTool.cpp  Loaders.cpp  Main.cpp  SpriteEditorTool.cpp  SpriteRendering.cpp  Tooling.cpp  Windowing.cpp
tools/CoffeeCup/: Config.yaml
tools/CoffeeCup/Data/: Generate Projects.macro  Install vcpkg.macro  InstallVcpkg.macro
tools/CoffeeCup/Scripts/CoffeeCup.Scripts/: CoffeeCup.Scripts.csproj  GenerateProjectsScript.cs  InstallVcpkgScript.cs
tools/CoffeeCup/Scripts/CoffeeCup.Scripts.Test/: CoffeeCup.Scripts.Test.csproj  Program.cs
tools/Scripts/: build_vs2019.bat  build_vs2022.bat
